Made a view to upload a service

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,19 @@
 <h1>Profiles#show</h1>
 <p>Find me in app/views/profiles/show.html.erb</p>
+<%= image_tag @profile.profile_picture %>
+
+<hr>
+
+<%= form_for @service, url: { controller: :services, action: :create } do |f| %>
+    <%= f.label :Category %>
+    <%= f.select :category_id, @categories.map {|c| [c.name, c.id]} %>
+    <br/>
+    <%= f.label :Picture%>
+    <%= f.file_field :picture %>
+    <br/>
+    <%= f.label :Explain%>
+    <%= f.text_area :desc_service%>
+    <br/>
+    <%= f.label :Price%>
+    <%= f.text_field :price%>
+<% end %>
