--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,8 +3,8 @@
     <%= label_tag :first_name, "First Name" %>
     <%= f.text_field :first_name %>
     <br/>
-    <%= label_tag :last_namme, "Last Name" %>
-    <%= f.text_field :last_namme %>
+    <%= label_tag :last_name, "Last Name" %>
+    <%= f.text_field :last_name %>
     <br/>
     <%= label_tag :email, :Email %>
     <%= f.text_field :email %>
