--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Services#index</h1>
 <p>Find me in app/views/services/index.html.erb</p>
+<% @services.each do |s| %>
+  <%= s.desc_service %>
+  <%= image_tag s.picture %>
+  <hr>
+<% end %>
