add subcategories and integrate categories with homepage

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -475,7 +475,7 @@ span.fa.fa-shopping-cart.my-cart-icon {
 /*-- //header --*/
 /*--banner--*/
 .top-top-banner{
-    background-image: url(<%= asset_path 'app/banner.jpg' %>) no-repeat;
+    background-image: url(<%= asset_path 'app/banner.jpg' %>);
 }
 .banner-info {
     margin:8em 0;
@@ -1827,6 +1827,11 @@ a#myTabDrop1 {
     border: 1px solid #999;
     margin-bottom: 2em;
 }
+
+.key label{
+    padding-top: 2%;
+}
+
 .form-w3agile h3{
     color: #029241;
     font-size: 2.5em;
