--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,27 +1,64 @@
 <%= display_errors_for_object @user %>
-<%= form_for @user, url: { action: :create }, html: { class: :form_nice } do |f| %>
-    <%= label_tag :first_name, "First Name" %>
-    <%= f.text_field :first_name %>
-    <br/>
-    <%= label_tag :last_name, "Last Name" %>
-    <%= f.text_field :last_name %>
-    <br/>
-    <%= label_tag :email, :Email %>
-    <%= f.text_field :email %>
-    <br/>
-    <%= label_tag :email_confirmation, "Confirm Email" %>
-    <%= f.text_field :email_confirmation %>
-    <br/>
-    <%= label_tag :username, :Username %>
-    <%= f.text_field :username %>
-    <br/>
-    <%= label_tag :password, :Password %>
-    <%= f.password_field :password %>
-    <br/>
-    <%= label_tag :kind, "Service Provider" %>
-    <%= f.radio_button :kind, "Service Provider" %>
-    <%= label_tag :kind, :Organizer %>
-    <%= f.radio_button :kind, :Organizer %>
-    <br/>
-    <%= f.submit :Create %>
-<% end %>
+<div class="login">
+		<div class="main-agileits">
+				<div class="form-w3agile form1">
+					<h3>Register</h3>
+					<%= form_for @user, url: { action: :create }, html: { class: :form_nice } do |f| %>
+						<div class="key">
+							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                            <%= f.text_field :first_name, placeholder: :First_Name %>
+							<!--<input  type="text" value="First name" name="first name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">-->
+							<div class="clearfix"></div>
+						</div>
+						<div class="key">
+							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                            <%= f.text_field :last_name, placeholder: :Last_Name %>
+							<!--<input  type="text" value="Last name" name="last name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">-->
+							<div class="clearfix"></div>
+						</div>
+						<div class="key">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+                            <%= f.text_field :email, placeholder: :Email, value: "" %>
+							<!-- <input  type="text" value="Username" name="username" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">-->
+							<div class="clearfix"></div>
+						</div>
+						<div class="key">
+							<i class="fa fa-key" aria-hidden="true"></i>
+                            <%= f.text_field :username, placeholder: :Username %>
+							<!--<input  type="text" value="Email" name="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required=""> -->
+							<div class="clearfix"></div>
+						</div>
+						<div class="key">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+                            <%= f.password_field :password, placeholder: :Password %>
+							<!-- <input  type="text" value="Confirm Email" name="cemail" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required=""> -->
+							<div class="clearfix"></div>
+						</div>
+						<div class="key">
+							<i class="fa fa-user" aria-hidden="true"></i>
+                            <%= label_tag :kind, "Service Provider" %>
+                            <%= f.radio_button :kind, "Service Provider" %>
+
+                            <%= label_tag :kind, :Organizer %>
+                            <%= f.radio_button :kind, :Organizer %>
+							<div class="clearfix"></div>
+						</div>
+						<!-- <div class="key the-table">
+							<table>
+								<tr>
+									<td>Individual</td>
+									<td><input type="radio" value="individual" name="typeofbusiness"></td>
+									<td>Business</td>
+									<td><input type="radio" value="business" name="typeofbusiness"></td>
+								</tr>
+							</table>
+						</div>-->
+						<br />
+						<div align="center">
+							<input type="submit" value="Submit">
+						</div>
+					<% end %>
+				</div>
+				
+			</div>
+		</div>
