changed services in controller for action index and show

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,13 +5,13 @@
 					<h3>Register</h3>
 					<%= form_for @user, url: { action: :create }, html: { class: :form_nice } do |f| %>
 						<div class="key">
-							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+							<i class="fa fa-user" aria-hidden="true"></i>
                             <%= f.text_field :first_name, placeholder: :First_Name %>
 							<!--<input  type="text" value="First name" name="first name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">-->
 							<div class="clearfix"></div>
 						</div>
 						<div class="key">
-							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+							<i class="fa fa-user" aria-hidden="true"></i>
                             <%= f.text_field :last_name, placeholder: :Last_Name %>
 							<!--<input  type="text" value="Last name" name="last name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">-->
 							<div class="clearfix"></div>
@@ -34,13 +34,20 @@
 							<!-- <input  type="text" value="Confirm Email" name="cemail" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required=""> -->
 							<div class="clearfix"></div>
 						</div>
-						<div class="key">
-							<i class="fa fa-user" aria-hidden="true"></i>
-                            <%= label_tag :kind, "Service Provider" %>
-                            <%= f.radio_button :kind, "Service Provider" %>
+						<div class="key the-table">
+                            <table>
+								<tr>
+									<td><%= label_tag :kind, "Service Provider" %></td>
+									<td><%= f.radio_button :kind, "Service Provider" %></td>
+									<td><%= label_tag :kind, :Organizer %></td>
+									<td><%= f.radio_button :kind, :Organizer %></td>
+								</tr>
+							</table>
+                            
+                            
 
-                            <%= label_tag :kind, :Organizer %>
-                            <%= f.radio_button :kind, :Organizer %>
+                            
+                            
 							<div class="clearfix"></div>
 						</div>
 						<!-- <div class="key the-table">
