--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,2 +1,7 @@
 <h1>Services#show</h1>
-<p>Find me in app/views/services/show.html.erb</p>
+<p>Find me in app/views/services/index.html.erb</p>
+<% @services.each do |s| %>
+  <%= s.desc_service %>
+  <%= image_tag s.picture.thumb.url %>
+  <hr>
+<% end %>
