Finished with creating profile and editing it

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require app/css/bootstrap
+ *= require app/css/bootstrap.min
  *= require app/css/font-awesome
  *= require app/css/jstarbox
  *= require app/css/style
